--- a/About.html
+++ b/About.html
@@ -14,28 +14,14 @@
 <!-- Custom styles for this template -->
 <link href="css/Aboutstyles.css" rel="stylesheet">
 
-<style>
-.parallax {
-  /* The image used */
-  background-image: url("https://media.giphy.com/media/l1KVcrdl7rJpFnY2s/giphy.gif");
 
-  /* Set a specific height */
-  min-height: 500px;
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-</style>
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#"> <img src="World.png" als="a local image" width="30px"> </a>
+      <a class="navbar-brand" href="#"> <img src="World.png" als="a local image" width="50px"> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -46,11 +32,14 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="about.html">Our Mission</a>
+        <li class="nav-item">
           <a class="nav-link" href="TorysPage.html">Food for Thought</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Another Link</a>
-        </li>
+          <a class="nav-link" href="Charlottespage.html">Vegan Ingredients & Alternatives</a>
+        <li class="nav-item">
+            <a class="nav-link" href="Anysiaspage.html">10 Top Tips</a>
       </ul>
     </div>
   </nav>
@@ -58,6 +47,8 @@
 <br>
 <br>
 <br>
+
+<div class="headtext">
 <h1> Our Mission </h1>
 
   <div id=changetheworld style="height:750px">
@@ -65,22 +56,45 @@
     <img src="https://media.giphy.com/media/l1KVcrdl7rJpFnY2s/giphy.gif" id="plantworld" alt="for a happy world" width="600px">
   </div>
 
+  </div>
+
 <div class="parallax"></div>
 
 <div class="maintext">
-<p> We want to show you how small changes can make a big impact on our planet </p>
+<p> We want to show you how small changes can make a big impact on our planet... </p>
 </div>
 
 <div class="parallax"></div>
 
 <div class="maintext">
-<p> Our website looks at how changes to the food you eat, and the way you think, can make a big impact </p>
+<p> ...Our website looks at how changes to the food you eat, and the way you think, can make a big impact... </p>
 </div>
 
 <div class="parallax"></div>
 
 <div class="maintext">
-<p> Why not take a look! </p>
+<p> ...Why not take a look! </p>
+
+<br>
+<br>
+
+<button class="home">
+  <a class="home" href="index.html">Back to Home <span class="sr-only">(current)</span></a>
+</button>
+
+<button class="home">
+  <a class="home" href="TorysPage.html">Food for Thought</a>
+</button>
+
+<button class="home">
+  <a class="home" href="Charlottespage.html">Vegan Ingredients & Alternatives</a>
+</button>
+
+<button class="home">
+  <a class="home" href="Anysiaspage.html">10 Top Tips</a>
+</button>
+
+
 </div>
 
 
