--- a/TorysPage.html
+++ b/TorysPage.html
@@ -13,14 +13,15 @@
 
       <link href="css/ToryStyles.css" rel="stylesheet">
 
+
 </head>
 
 <body>
 
-<div class="container">
+<div class="container-fluid">
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#"> <img src="World.png" als="a local image" width="50px"> </a>
+      <a class="navbar-brand" href="#"> <img src="World.png" als="a local image" width="50px"> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,119 +29,181 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">Our Mission</a>
         <li class="nav-item">
           <a class="nav-link" href="TorysPage.html">Food for Thought</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Another Link</a>
-        </li>
+          <a class="nav-link" href="Charlottespage.html">Vegan Ingredients & Alternatives</a>
+        <li class="nav-item">
+            <a class="nav-link" href="Anysiaspage.html">10 Top Tips</a>
       </ul>
     </div>
   </nav>
 
-  <div>
+<br>
+<br>
+<br>
+<br>
 
-    <br>
-    <br>
-    <br>
-    <br>
+  <div>
 
     <h1>FOOD FOR THOUGHT</h1>
     <h2>Some recipes and ideas to help you cook up an (envornmentally friendly) storm!</h2>
-
+<br>
+<br>
+  <div>
+    <p> Its a well known fact that what you eat can have a massive impact on the environment; however actually making the changes to eat in a more sustainable manner can be quite daunting! </p>
+    <p> So, here are a few recipe ideas to start you on your way! </p>
   </div>
 
-  <div>
-    <h2> Why should we consider the environment when we eat? </h2>
-    <p> Human diets inextricably link health and environmental sustainability, and have the potential to nurture both.
-<br>
-<br>
-Increased food production over the past 50 years has helped improve life expectancy and reduce hunger, infant and child mortality rates, and global poverty. However, such benefits are now being offset by shifts towards unhealthy diets.
-<br>
-<br>
-Globally, as nations have urbanized and citizen incomes have increased, traditional diets (typically higher in quality plant-based foods), have transitioned to a “Western-style dietary pattern,” characterized by high consumption of calories, highly processed foods (refined carbohydrates, added sugars, sodium, and unhealthy fats), and high amounts of animal products.
-<br>
-<br>
-Along with the negative human health impacts associated with this nutrition transition, this dietary pattern is also unsustainable. Current food production is already driving climate change, biodiversity loss, pollution, and drastic changes in land and water use.
-<br>
-<br>
-Transitioning towards healthy diets from sustainable food systems—especially with our global population slated to reach 10 billion by 2050—poses an unprecedented challenge.
-<br>
-<br>
-However, research by an international working group of scientists shows this “Great Food Transformation” could be achievable through a combination of dramatic reductions in food losses and waste, major improvements in food production practices, and substantial dietary shifts toward mostly plant-based dietary patterns.   </p>
-  </div>
+</div>
 
-  <div>
-<h2> Recipes for cooking up a savvy storm </h2>
 <br>
 <br>
-    <div class="container">
+
+
+  <div class="boxed">
+    <h2> Recipes for cooking up a savvy storm... </h2>
+<br>
+<br>
+
+  <div class="container">
     <div class="row">
-    <div class="col-sm">
-        <a href=https://www.bosh.tv/recipes/butternut-squash-with-spiced-red-wine-jus-roast-spiced-nuts title="Butternut Squash with Spiced Red Wine Jus">
-        <img src="ButternutSquash.jpg" als="a local image" width="300px" height="300px">
-      </a>
-      <p> Roasted Butternut Squash </p>
-    </div>
+      <div class="col-sm">
+        <div class="container">
+        <img src="ButternutSquash.jpg" alt="Butternut Squash" class="image">
+          <div class="overlay">
+            <div class="text"> <a href=https://www.bosh.tv/recipes/butternut-squash-with-spiced-red-wine-jus-roast-spiced-nuts title="Butternut Squash with Spiced Red Wine Jus"> Butternut Squash with Spiced Red Wine Jus </a>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <div class="col-sm">
-      <a href=https://www.bbcgoodfood.com/recipes/miso-aubergines title="Miso Aubergine">
-      <img src="Augbergine.jpg" als="a local image" width="300px" height="300px">
-      </a>
-      <p> Miso Aubergines </p>
-    </div>
 
-    <div class="col-sm">
-      <a href=https://www.bosh.tv/recipes/big-bosh-billionaire-lasagna title="Billionaire Lasagne">
-      <img src="BillionareLasagne.jpg" als="a local image" width="300px" height="300px">
-      </a>
-      <p> Billionaire Lasagne </p>
-    </div>
+      <div class="col-sm">
+        <div class="container">
+        <img src="Augbergine.jpg" alt="Aubergine" class="image">
+          <div class="overlay">
+            <div class="text"> <a href=https://www.bbcgoodfood.com/recipes/miso-aubergines title="Miso Aubergines"> Miso Aubergines </a>
+            </div>
+           </div>
+        </div>
+      </div>
+
+      <div class="col-sm">
+        <div class="container">
+          <img src="BillionareLasagne.jpg" alt="Billionaire Lasagne" class="image">
+            <div class="overlay">
+              <div class="text"> <a href=https://www.bosh.tv/recipes/big-bosh-billionaire-lasagna title="Billionaire Lasagne"> Billionaire Lasagne </a>
+              </div>
+            </div>
+        </div>
+      </div>
     </div>
   </div>
 
-<div>
-For more recipies, check out:
-<ul>
-<li><a href="https://www.bosh.tv/"> Bosh Kitchen </a> </li>
-<li><a href="https://www.bbcgoodfood.com/recipes/collection/vegan"> BBC Good Food's vegan selection </a> </li>
-<li><a href="http://www.mobkitchen.co.uk/?category=Vegan%20Mob"> Mob Kitchen </a> </li>
 
+<br>
+<br>
+
+  <div id="morerecipes">
+  <p> For more recipies, check out: </p>
+    <ul class="a">
+      <li><a href="https://www.bosh.tv/"> Bosh Kitchen </a> for easy to make, plant based feasts </li>
+      <li><a href="https://www.bbcgoodfood.com/recipes/collection/vegan"> BBC Good Food </a>'s vegan selection </li>
+      <li><a href="http://www.mobkitchen.co.uk/?category=Vegan%20Mob"> Mob Kitchen </a> who have a new veggie cookbook out in July! </li>
+      <li><a href="https://livias.co.uk/"> Livia's Kitchen </a> for some sweet vegan treats </li>
+      <li><a href="https://deliciouslyella.com/"> Deliciously Ella </a> for some healthy vegan numbers </li>
+    </ul>
   </div>
-  <br>
-  <br>
+</div>
 
+<br>
+<br>
 
-  <div>
-<h2> ...and for when you want someone else to cook that storm for you </h2>
-<p> For a mordern, healthy, "sexy" treat:     <a href="https://www.kaliforniakitchen.co.uk/"> <img src="KaliforniaKitchen.png" als="a local image" width="80px" height="50px"></a>      is serving up some delicious, healthy, vegan delights </p>
-<p> ...or, for something a bit more naughty, head to       <a href="http://templeofseitan.co.uk/"> <img src="TempleofSeitan.png" als="a local image" width="50px" height="80px"> </a>      for some vegan takes on your fast food favourites </p>
-<p> For those special occasions,      <a href="http://templeofseitan.co.uk/"> <img src="Farmacy.png" als="a local image" width="80px" height="50px"> </a>       has a fantastic (and vegan!) high tea </p>
+<div class="boxed">
+  <h2> ...and for when you want someone else to cook that storm for you </h2>
 
+<br>
+<br>
+
+  <div id="restaurants">
+    <p> For a mordern, healthy, "sexy" treat:     <a href="https://www.kaliforniakitchen.co.uk/"> <img src="KaliforniaKitchen.png" als="a local image" width="100px" height="60px"></a>      is serving up some delicious, healthy, vegan delights </p>
+<br>
+    <p> ...or, for something a bit more naughty, head to       <a href="http://templeofseitan.co.uk/"> <img src="TempleofSeitan.png" als="a local image" width="60px" height="100px"> </a>      for some vegan takes on fast food favourites </p>
+<br>
+    <p> For those special occasions,      <a href="http://templeofseitan.co.uk/"> <img src="Farmacy.png" als="a local image" width="100px" height="60px"> </a>       has a fantastic (and vegan!) high tea </p>
   </div>
+
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+  <h2> 5 tips for sustainable eating </h2>
 
 <br>
 
-<div>
-  <h3> 5 tips for sustainable eating </h3>
+<button class="collapsible">Prioritise plants</button>
+  <div class="content">
+    <p><ul> <li> The <a href=https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/> Healthy Eating Plate </a> suggests filling half your plate with vegetables and fruits as part of an optimal diet, but planning our meals aroundproduce_cabbage_beets produce benefits the planet as well. Shifting to a more plant-based way of eating will help reduce freshwater withdrawals and deforestation —a win-win for both our personal health and the environment. </li> </ul> </li>
+    </p>
+  </div>
+<button class="collapsible">Minimise meat</button>
+  <div class="content">
+    <p><ul> <li> The Healthy Eating Plate already suggests reducing red meat, and now there’s another reason to treat it more as a condiment than a main dish. Meat production is a substantial contributor to greenhouse gas emissions – beef production especially – and the environmental burden deepens, as raising and transporting livestock also requires more food, water, land, and energy than plants (3). To eat for our own health as well as that of the planet, we should consider picking non-meat proteins such as nuts and legumes. </li> </ul> </li>
+    </p>
+  </div>
+<button class="collapsible">Select new seafood</button>
+  <div class="content">
+    <p> <ul> <li> Fish can be a healthy choice if part of an overall fisherman_reelhealthy dietary style, but some species are at risk of being overfished, or produced in ways that harm the marine environment. If your go-to variety of fish is on the “avoid” list, consider trying some new seafood. </li> </ul> </li>
+    </p>
+  </div>
+<button class="collapsible">Look Local</button>
+  <div class="content">
+    <p> <ul> <li> Exploring farmers markets helps you find fresh produce grown locally, but equally important, you can meet the people who produce your food. Such relationships are opportunities for education: you can learn how your food was grown, when it was harvested, and even how to prepare it. </li> </ul> </li>
+    </p>
+  </div>
+<button class="collapsible">Eat Mindfully </button>
+  <div class="content">
+    <p> <ul> <li> One of the simplest things you can do to eat more spoon_flowerssustainably is to practice mindful eating. Focusing on what you’re eating allows you to reflect on where your food came from and how it is nourishing your body. Additionally, by tuning in to your hunger signals you may learn that you don’t need as much food as you thought, and resize your meals accordingly. By paying more attention to how we eat and thinking about the “bigger picture,” we may alter our food consumption and reduce food waste, as well as become encouraged to seek out more sustainable food sources. </li> </ul> </li>
+    </p>
+  </div>
 
-<ol>
-      <li>  <b> Prioritise plants </b>
-            <ul> <li> The <a href=https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/> Healthy Eating Plate </a> suggests filling half your plate with vegetables and fruits as part of an optimal diet, but planning our meals aroundproduce_cabbage_beets produce benefits the planet as well. Shifting to a more plant-based way of eating will help reduce freshwater withdrawals and deforestation —a win-win for both our personal health and the environment. </li> </ul> </li>
-      <li>  <b> Minimise meat </b>
-            <ul> <li> The Healthy Eating Plate already suggests reducing red meat, and now there’s another reason to treat it more as a condiment than a main dish. Meat production is a substantial contributor to greenhouse gas emissions – beef production especially – and the environmental burden deepens, as raising and transporting livestock also requires more food, water, land, and energy than plants (3). To eat for our own health as well as that of the planet, we should consider picking non-meat proteins such as nuts and legumes. </li> </ul> </li>
-      <li>  <b> Select new seafood </b>
-            <ul> <li> Fish can be a healthy choice if part of an overall fisherman_reelhealthy dietary style, but some species are at risk of being overfished, or produced in ways that harm the marine environment. If your go-to variety of fish is on the “avoid” list, consider trying some new seafood. </li> </ul> </li>
-      <li>  <b> Look Local </b>
-            <ul> <li> Exploring farmers markets helps you find fresh produce grown locally, but equally important, you can meet the people who produce your food. Such relationships are opportunities for education: you can learn how your food was grown, when it was harvested, and even how to prepare it.</li> </ul> </li>
-      <li>  <b> Eat Mindfully </b>
-            <ul> <li> One of the simplest things you can do to eat more spoon_flowerssustainably is to practice mindful eating. Focusing on what you’re eating allows you to reflect on where your food came from and how it is nourishing your body. Additionally, by tuning in to your hunger signals you may learn that you don’t need as much food as you thought, and resize your meals accordingly. By paying more attention to how we eat and thinking about the “bigger picture,” we may alter our food consumption and reduce food waste, as well as become encouraged to seek out more sustainable food sources. </li> </ul> </li>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-</ol>
 </div>
-</div>
+
+<script>
+      var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
