--- a/About.html
+++ b/About.html
@@ -13,7 +13,9 @@
 
 <!-- Custom styles for this template -->
 <link href="css/Aboutstyles.css" rel="stylesheet">
-
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
 <body>
@@ -52,7 +54,7 @@
 <h1> Our Mission </h1>
 
   <div id=changetheworld style="height:750px">
-    <p> <i> Together we can change the world! </i> </p>
+    <p class="body-text"> <i> Together we can change the world! </i> </p>
     <img src="https://media.giphy.com/media/l1KVcrdl7rJpFnY2s/giphy.gif" id="plantworld" alt="for a happy world" width="600px">
   </div>
 
@@ -61,13 +63,13 @@
 <div class="parallax"></div>
 
 <div class="maintext">
-<p> We want to show you how small changes can make a big impact on our planet... </p>
+<p class="body-text"> We want to show you how small changes can make a big impact on our planet... </p>
 </div>
 
 <div class="parallax"></div>
 
 <div class="maintext">
-<p> ...Our website looks at how changes to the food you eat, and the way you think, can make a big impact... </p>
+<p class="body-text"> ...Our website looks at how changes to the food you eat, and the way you think, can make a big impact... </p>
 </div>
 
 <div class="parallax"></div>
@@ -97,6 +99,53 @@
 
 </div>
 
+
+
+<footer class="section footer-classic context-dark bg-image" style="background: #2d3246;">
+        <div class="container">
+          <div class="row row-30">
+            <div class="col-md-4 col-xl-5">
+              <div class="pr-xl-4">
+                <p>We are three girls trying to make a website and save the planet.</p>
+                <!-- Rights-->
+                <p class="rights"><span>©  </span><span class="copyright-year">2019</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved.</span></p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <h5>Contacts</h5>
+              <dl class="contact-list">
+                <dt>Address:</dt>
+                <dd>Buckley Building, 49 Clerkenwell Green, Farringdon, London EC1R 0EB</dd>
+              </dl>
+              <dl class="contact-list">
+                <dt>email:</dt>
+                <dd><a href="mailto:#">cfg@gmail.com</a></dd>
+              </dl>
+              <dl class="contact-list">
+                <dt>phones:</dt>
+                <dd><a href="tel:#">+447459810192</a> <span>or</span> <a href="tel:#">+91 9571195353</a>
+                </dd>
+              </dl>
+            </div>
+            <div class="col-md-4 col-xl-3">
+              <h5>Links</h5>
+              <ul class="nav-list">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><a href="#">Pricing</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row no-gutters social-container">
+          <div class="col"><a class="social-inner" href="https://facebook.com/"><span class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
+          <div class="col"><a class="social-inner" href="https://instagram.com/"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
+          <div class="col"><a class="social-inner" href="https://twitter.com/"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
+          <div class="col"><a class="social-inner" href="https://youtube.com/"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
+        </div>
+      </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
