--- a/Charlottespage.html
+++ b/Charlottespage.html
@@ -10,180 +10,89 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="CSS/Charlottestyles.css">
+</head>
+  <body>
+    <div class= "container">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-</header>
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Another Link</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
-<body>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <main role="main" class="container">
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">Our Mission</a>
-        <li class="nav-item">
-          <a class="nav-link" href="TorysPage.html">Food for Thought</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Charlottespage.html">Vegan Ingredients & Alternatives</a>
-        <li class="nav-item">
-            <a class="nav-link" href="Anysiaspage.html">10 Top Tips</a>
-      </ul>
-    </div>
-  </nav>
-<br>
+  <div class="heading">
+    <br>
+    <br>
+    <h1> Vegan Ingredients & Alternatives </h1>
+    <h2> Our top 5 ingrediants and food alternatives to lead a Vegan life! </h2>
+  </div>
 
-<main role="main">
+  <p> Thinking of going vegan, or including more vegan options to your repertoire? Switching to a vegan diet can be daunting, but to ease the transition, here are some accessible substitutes.</p>
 
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1 class="jumbotron-heading">Vegan Alternatives</h1>
-      <p class="lead text-muted">Thinking of going vegan, or including more vegan options to your repertoire? Switching to a vegan diet can be daunting, but to ease the transition, here are some accessible substitutes.</p>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-        <div class="col-mb-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Milk.jpg" alt="Milk" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">1. Milk - Popular non-dairy milks include oat, hazelnut, cashew, soy, almond and hemp. Non- dairy milks are fairy accessible now in large supermarket stores. </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=500&bih=709&tbm=shop&ei=mAPjXJLYFePDxgOvsrDIBA&q=non+dairy+milk&oq=non+dairy+milk&gs_l=psy-ab.3..0l5.2464.8226.0.8544.23.17.0.5.5.0.159.859.14j1.15.0....0...1c.1.64.psy-ab..4.19.835....0.ugHfz_QWblQ" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Yogurt.jpg" alt="Yogurt" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">2. Non Dairy Yogurts- While plant-based ‘gurts are lactose-free, they’re also brimming with healthy fats coming from the bases they’re crafted with— think soy, nuts, and coconut.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=1gTjXO7RLdWg1fAP4NO7yAY&q=non+dairy+yogurts&oq=non+dairy+yogurts&gs_l=psy-ab.3..0.2917.12109.0.12258.17.9.0.8.8.0.51.426.9.9.0....0...1c.1.64.psy-ab..0.17.461....0.RSsGqpuL0ukQ" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Butter.jpg" alt="Butter" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">3. Butter - As well as vegan butters available, margerine serves as an excellent alternative to butter to use on toast, sandwiches and to spread lovingly atop scones and crumpets.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=2ATjXL3KKOOH1fAPsIWw6As&q=margarine&oq=margarine&gs_l=psy-ab.3..0l10.1881.3062.0.3851.4.4.0.0.0.0.122.252.3j1.4.0....0...1c.1.64.psy-ab..0.2.88....0.t0ev04QDSGI" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="DarkChocolate.jpg" alt="DarkChocolate" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text"> 4. Dark Chocolate - Pure dark chocolate is rich in antioxidants and is a great milk chocolate replacement for non-dairy desserts. </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=AAXjXIeOF9-Y1fAPwLSWqAY&q=dark+chocolate&oq=Dark+cho&gs_l=psy-ab.1.0.0l10.25526.29277.0.32071.24.22.0.0.0.0.124.1536.18j3.21.0....0...1c.1.64.psy-ab..9.15.904....0.ndlbDi8eHpE" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Mushrooms.jpg" alt="Mushrooms.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">5. Mushrooms- Crimini, Shiitake, Portobello, and Oyster mushrooms all have a juicy hearty texture that is perfect for replacing meat. Ground into veggie burgers or charred on the grill, mushrooms are a succulent substitution for meat in any form.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=IQXjXJT6DM2n1fAPw5e0uAg&q=mushroom&oq=mushroom&gs_l=psy-ab.3..0l10.23612.24631.0.25638.8.4.0.4.4.0.87.273.4.4.0....0...1c.1.64.psy-ab..0.8.291....0.XlRf1417MK0" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Aquafaba.jpg" alt="Aquafaba.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text"> 6. Aquafaba - The water from a can of chickpeas is a superb substitute for egg white. It can used to make meringues, mousses and lots of bakes like macarons, sponges and brownies. It can even be a central ingredient in dairy free batter and sauces like mayonnaise. </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=OwXjXL38MeyV1fAPkp6isAY&q=Aquafaba&oq=Aquafaba&gs_l=psy-ab.3..0l10.22888.22888.0.23259.1.1.0.0.0.0.158.158.0j1.1.0....0...1c.2.64.psy-ab..0.1.158....0.S3C5YnmcTVo" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Jackfruit.jpg" alt="Jackfruit.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">7. Jackfruit - Jackfruit may be a healthy tropical fruit, but its texture and mild taste make it a wonderful stand-in for meat.  It can be used to make pulled “pork” or BBQ jackfruit.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=VAXjXPHoAdel1fAPyIOruAo&q=Jackfruit&oq=Jackfruit&gs_l=psy-ab.3..0l10.36748.36748.0.37109.1.1.0.0.0.0.77.77.1.1.0....0...1c.2.64.psy-ab..0.1.76....0.wW843jjh2Dg" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Avocado.jpg" alt="Avocado.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">8. Avocados- This nutrient-dense fruit can add a creamy body and boost of flavor to almost anything. Avocados can be added to pesto sauce as a substitute for cheese or whipped up as a spread for sandwiches.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=eQXjXKXnNbKQ1fAPu9uD0AM&q=Avocado&oq=Avocado&gs_l=psy-ab.3..0l10.22317.22317.0.22657.1.1.0.0.0.0.59.59.1.1.0....0...1c.2.64.psy-ab..0.1.59....0.-ZRYUMojQRk" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Tofu.jpg" alt="Tofu.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">9. Tofu- Tofu can be sliced, diced, or cubed to achieve a meaty consistency. For best results, freeze a package of tofu, and then defrost in the refrigerator overnight.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=kQXjXKqnGNif1fAPwNy10A0&q=tofu&oq=tofu&gs_l=psy-ab.3..0l10.1951.2436.0.2711.4.4.0.0.0.0.88.282.4.4.0....0...1c.1.64.psy-ab..0.4.280....0.mA8o9z5Gwe8" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-          <img class="d-block w-100" src="Flaxseed.jpg" alt="Flaxseed.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">10. Flaxseed - This nutritious seed is packed with antioxidants and can also be used as a vegan egg substitute in baking and cooking when ground. Ground flaxseed emulates eggs’ binding qualities in breads, cakes, muffins, cookies, burgers, and vegan meatballs.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=tQXjXKGrK_aM1fAPnfCxmAc&q=Flaxseed+&oq=Flaxseed+&gs_l=psy-ab.3..0l10.11424.12235.0.12525.4.4.0.0.0.0.48.171.4.4.0....0...1c.1j2.64.psy-ab..0.4.170....0.cJaEhxL8R7s" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-            </div>
-          </div>
-        </div>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="Milk.jpg" alt="Milk" width="300px">
+      </div>
+      <div class="carousel-item">
+        <<img class="d-block w-100" src="Butter.jpg" alt="Butter" width="300px">
+      </div>
+      <div class="carousel-item">
+          <<img class="d-block w-100" src="Meat.jpg" alt="Meat" width="300px">
       </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 
-</main>
-
-<footer class="text-muted">
-  <div class="container">
-    <p class="float-right">
-      <a href="#">Back to top</a>
-    </p>
+  <div class="carousel-item">
+    <img src="..." alt="...">
+    <div class="carousel-caption d-none d-md-block">
+      <h5>...</h5>
+      <p>...</p>
+    </div>
   </div>
-</footer>
+
+<div>
+
+    <ul>
+      <li> Milk - Popular non-dairy milks include oat, hazelnut, cashew, soy, almond and hemp. With so many non-dairy alternatives to choose from you are bound to find one to tickle your tastebuds! Non- dairy milks are fairy accessible now in large supermarket stores but if you find yourself struggling in the supermarket aisles, look no further than this easy guide <a href="https://www.bbcgoodfood.com/howto/guide/how-make-dairy-free-milk"> to make your own! </a> </li>
+      <li> Butter - As well as vegan butters available, margerine serves as an excellent alternative to butter. </li>
+      <li> Meat - Thanks to our veggie friends, meat substitutes are generally very accessible in everyday supermarkets. Among the products on the market now that will substitute for meat are: veggie burgers, veggie meatballs, veggie sausages, veggie ground “beef,” soy chicken patties and nuggets and even veggie bacon! </li>
+    </ul>
+</div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
+    <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+</div>
+</body>
+</html>
