--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet">
   </head>
 
@@ -64,7 +65,7 @@
       <img class="d-block w-100" src="Wildlife4.jpg" alt="wildlife4" width="300px">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="Wildlife5.jpg" alt="wildlife5" width="300px">
+      <img class="d-block w-100" src="Wildlife5.jpg" alt="wildlif35" width="300px">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
